# circuitmod

./: .gitignore  CMakeLists.txt  COPYING  README.md  and2circuit.cpp  and2circuit.h  circuitslot.cpp  circuitslot.h  config.cpp  config.h  drawinghelper.cpp  drawinghelper.h  editormodel.cpp  editormodel.h  editorview.cpp  editorview.h  elementadder.cpp  elementadder.h  icircuit.cpp  icircuit.h  icircuitview.cpp  icircuitview.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  simulationwidget.cpp  simulationwidget.h  typedefs.h  wiremanager.cpp  wiremanager.h
circuits/: CMakeLists.txt  and2.cpp  and2.h  circuits.h  input.cpp  input.h  nand2.cpp  nand2.h  nor2.cpp  nor2.h  not.cpp  not.h  or2.cpp  or2.h  output.cpp  output.h
tests/: CMakeLists.txt  testmacro.h
tests/and2_circuit_test/: CMakeLists.txt  and2circuittest.cpp  and2circuittest.h
tests/circuit_combination_test/: CMakeLists.txt  cicuitcombinationtest.cpp  cicuitcombinationtest.h
tests/circuit_test/: CMakeLists.txt  circuittest.cpp  circuittest.h
views/: and2view.cpp  and2view.h  inputview.cpp  inputview.h  nand2view.cpp  nand2view.h  nor2view.cpp  nor2view.h  notview.cpp  notview.h  or2view.cpp  or2view.h  outputview.cpp  outputview.h  views.h
